# bfcxx

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README  README.md  cmake-format.json
cmake/: CPM.cmake  prevent-in-source-builds.cmake
include/bfcxx/: interpret.hpp  interpreter.hpp  lexer.hpp  parser.hpp
source/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
source/bfcxx/: CMakeLists.txt  interpret.cpp  interpreter.cpp  lexer.cpp  lexer.hpp  parser.cpp
source/cli/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  lexer.cpp  test_lexer.cpp  test_parser.cpp
